# pepsipy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  coverage.yml
data/: metadata.csv
frontend/: db.sqlite3  manage.py  requirements.txt
frontend/dashboard/: apps.py  forms.py  test_dashboard.py  urls.py  utils.py  views.py
frontend/dashboard/templates/: _results.html  _sidebar_config.html  _sidebar_selection.html  index.html  overview.html
frontend/dashboard/templatetags/: utils.py
frontend/pepsi/: asgi.py  settings.py  urls.py  wsgi.py
frontend/project/: asgi.py  settings.py  urls.py  wsgi.py
frontend/static/css/: base.css
frontend/static/js/: overview.js
frontend/static/templates/: base.html  navbar.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_063f057f342dc16c___init___py.html  z_063f057f342dc16c_biochemical_py.html  z_063f057f342dc16c_miscellaneous_py.html  z_6fc211d0769d21b2_physicochemical_py.html  z_6fc211d0769d21b2_sequence_py.html  z_a9576347c59be8dc___init___py.html  z_a9576347c59be8dc_api_py.html  z_a9576347c59be8dc_constants_py.html  z_a9576347c59be8dc_features_py.html  z_a9576347c59be8dc_plots_py.html  z_a9576347c59be8dc_utils_py.html  z_c4ea8bdda2cedfdc_calculator_py.html  z_c4ea8bdda2cedfdc_constants_py.html  z_c4ea8bdda2cedfdc_features_py.html  z_c4ea8bdda2cedfdc_plots_py.html  z_c4ea8bdda2cedfdc_utils_py.html  z_dc38b4a781aaaeeb___init___py.html  z_dc38b4a781aaaeeb_api_py.html  z_dc38b4a781aaaeeb_calculator_py.html  z_dc38b4a781aaaeeb_constants_py.html  z_dc38b4a781aaaeeb_features_py.html  z_dc38b4a781aaaeeb_plots_py.html  z_dc38b4a781aaaeeb_utils_py.html  z_de256f64eb37ca95_utils_py.html  z_f2ea2be1aad26516_utils_py.html  z_f2ea2be1aad26516_views_py.html
scripts/: download_ipc2.sh
src/: __main__.py  utils.py
src/features/: example.py  sequence.py
src/pepsi/: __main__.py  analysis.py  api.py  calculator.py  constants.py  features.py  plots.py  utils.py
src/pepsipy/: __init__.py  __main__.py  api.py  constants.py  features.py  plots.py  utils.py
src/peptidefeatures/: __main__.py  calculator.py  constants.py  features.py  plots.py  utils.py
src/peptidefeatures/constants/: __init__.py  biochemical.py  miscellaneous.py
src/peptidefeatures/features/: physicochemical.py  sequence.py
src/peptidefeatures/plots/: compare.py  comparison.py  other.py  sequence.py
src/plots/: sequence.py
tests/: constants.py  test_api.py  test_calculator.py  test_example.py  test_features.py  test_frontend.py  test_physiochemical.py  test_sequence.py  test_utils.py
tests/data/: metadata.csv  peptides.csv
