[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pepsipy*"]

[project]
name = "pepsipy"
version = "1.0.1"
authors = [
  { name="Ronja Krueger", email="ronja.krueger@student.hpi.de" }
]
description = "A library to calculate peptide features."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.3.0",
  "pandas==2.3.0",
  "plotly==6.1.2",
  "kaleido==0.2.1",
  "scikit-learn==1.7.0",
  "modlamp==4.3.2",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
keywords = ["bioinformatics", "peptides"]

[project.urls]
Repository = "https://github.com/ronjakrg/pepsipy"
Issues = "https://github.com/ronjakrg/pepsipy/issues"

[project.scripts]
run = "pepsipy.__main__:main"

[tool.coverage.run]
source = ["src", "frontend"]
relative_files = true

[tool.coverage.report]
omit = [
  "**/__main__.py",
   "**/test_*.py",
  "**/external/*",
  "apps.py",
  "manage.py",
  "urls.py",
  "settings.py",
  "asgi.py",
  "wsgi.py",
  "forms.py",
]

[tool.black]
extend-exclude = '''
(
  (^|/)external(/|$)
)
'''